--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
     <div id="brandButtons" class="grid grid-cols-1 md:grid-cols-2 gap-4">
       <script>
         const brands = [
-          "ROLEX", "AP", "CARTIER"
-        ];
+  "ROLEX", "AP", "CARTIER", "CASIO", "G-SHOCK", "HUBLOT",
+  "INVICTA", "MINIFOCUS", "ORIENT", "PATEK", "Q&Q",
+  "RICHARD MILLE", "SANSE", "TECHNO", "TECHNOMARINE", "TISSOT"
+];
         brands.forEach((brand) => {
           document.write(`
             <button
