--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
       document.getElementById('brandButtons').classList.remove('hidden');
       document.getElementById('productsContainer').classList.add('hidden');
       document.getElementById('backButton').classList.add('hidden');
+      window.scrollTo({ top: 0, behavior: 'smooth' });
     }
   </script>
 </body>
