--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
         { name: "Rolex Dama Modelo 6", img: "https://i.postimg.cc/0y6WVD0n/c079ffc3-3c72-45c6-a754-8c957e547ad9.jpg" },
         { name: "Rolex Dama Modelo 7", img: "https://i.postimg.cc/Bndhkbh0/d8f80d5e-e2f3-422e-9be9-01d62320726e.jpg" }
       ]
+      "CASIO": [
+      { name: "Rolex Dama Modelo 7", img: "https://i.postimg.cc/Bndhkbh0/d8f80d5e-e2f3-422e-9be9-01d62320726e.jpg" }
+      
     };
 
     function showBrand(brand) {
