--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         { name: "AP Modelo 3", img: "https://i.postimg.cc/1XLwWnHn/AP2.jpg" },
         { name: "AP Modelo 4", img: "https://i.postimg.cc/t4GFW6J8/AP4.jpg" },
         { name: "AP Modelo 5", img: "https://i.postimg.cc/65vd8cWd/AP5.jpg" },
-        
+        { name: "AP Modelo 6", img: "https://i.postimg.cc/sXMJwrrL/AP3.jpg" }
       ],
       "CARTIER": [
         { name: "Cartier Modelo 1", img: "https://i.postimg.cc/sXP5nDLw/0861e1e8-60b6-44f8-a342-d28b0b35e0d7.jpg" },
@@ -143,10 +143,6 @@
         { name: "Rolex Dama Modelo 6", img: "https://i.postimg.cc/0y6WVD0n/c079ffc3-3c72-45c6-a754-8c957e547ad9.jpg" },
         { name: "Rolex Dama Modelo 7", img: "https://i.postimg.cc/Bndhkbh0/d8f80d5e-e2f3-422e-9be9-01d62320726e.jpg" }
       ]
-      "CASIO": [
-      { name: "Rolex Dama Modelo 7", img: "https://i.postimg.cc/Bndhkbh0/d8f80d5e-e2f3-422e-9be9-01d62320726e.jpg" }
-      ];
-      
     };
 
     function showBrand(brand) {
