--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="brandButtons" class="grid grid-cols-1 md:grid-cols-2 gap-4">
       <script>
         const brands = [
-  "ROLEX", "AP", "CARTIER", "CASIO", "G-SHOCK", "HUBLOT",
+  "ROLEX", "AP", "CARTIER", "CASIO", "G-SHOCK", "G FORCE", "G-FOX", "HUBLOT",
   "INVICTA", "MINIFOCUS", "ORIENT", "PATEK", "Q&Q",
   "RICHARD MILLE", "SANSE", "TECHNO", "TECHNOMARINE", "TISSOT"
 ];
@@ -98,21 +98,21 @@
         { name: "AP Modelo 6", img: "https://i.postimg.cc/sXMJwrrL/AP3.jpg" }
       ],
       "CASIO": [
-        { name: "Rolex Modelo 1", img: "https://i.postimg.cc/26P8B4Gt/0e3064b1-904d-4bf6-a637-55f7e5da080d.jpg" },
-        { name: "Rolex Modelo 2", img: "https://i.postimg.cc/Qd08qLS1/14f74bd6-935e-4e62-a038-7e9b4e572712.jpg" },
-        { name: "Rolex Modelo 3", img: "https://i.postimg.cc/sfh2CNDC/1cabfa00-da98-490f-973e-9e3932311580.jpg" },
-        { name: "Rolex Modelo 4", img: "https://i.postimg.cc/yYK746b0/32708e54-dd86-43c5-866b-ccd5da745195.jpg" },
-        { name: "Rolex Modelo 5", img: "https://i.postimg.cc/FKz9WPnq/35cd14f2-e726-4e41-84e7-fd5155756659.jpg" },
-        { name: "Rolex Modelo 6", img: "https://i.postimg.cc/0QJ9xzv0/386a1066-97b7-4f40-b89d-a6c4a5ae93fa.jpg" },
-        { name: "Rolex Modelo 7", img: "https://i.postimg.cc/xTGTcNzs/3d2cf1ac-856f-46a3-8a0b-c316d2273959.jpg" },
-        { name: "Rolex Modelo 8", img: "https://i.postimg.cc/CLpxhszB/3dfe8f75-b6e0-4723-bd35-6ca57bc65d2d.jpg" },
-        { name: "Rolex Modelo 9", img: "https://i.postimg.cc/QMzjRp2M/45d39f59-81f7-41a6-aded-0fd9801f285c.jpg" },
-        { name: "Rolex Modelo 10", img: "https://i.postimg.cc/FHWvLysx/711034ca-5cc2-44c0-9b3e-9708a7a206fb.jpg" },
-        { name: "Rolex Modelo 11", img: "https://i.postimg.cc/RCKvDJXM/7657e33a-f7ed-4713-97be-182d744afab9.jpg" },
-        { name: "Rolex Modelo 12", img: "https://i.postimg.cc/6qJtQB5J/781afb84-5207-44ea-92aa-b20f0544e22f.jpg" },
-        { name: "Rolex Modelo 13", img: "https://i.postimg.cc/3xJ7NS7R/88529865-8e70-4b96-8a0a-47a2b985d686.jpg" },
-        { name: "Rolex Modelo 14", img: "https://i.postimg.cc/fycZt1J3/8916d997-7638-4bb0-b23a-93f6a9856cb0.jpg" },
-        { name: "Rolex Modelo 15", img: "https://i.postimg.cc/gkKmY9CQ/9047c7e0-1091-41b0-90b5-0a0bb57fa5ca.jpg" },
+        { name: "Casio Modelo 1", img: "https://i.postimg.cc/26P8B4Gt/0e3064b1-904d-4bf6-a637-55f7e5da080d.jpg" },
+        { name: "Casio Modelo 2", img: "https://i.postimg.cc/Qd08qLS1/14f74bd6-935e-4e62-a038-7e9b4e572712.jpg" },
+        { name: "Casio Modelo 3", img: "https://i.postimg.cc/sfh2CNDC/1cabfa00-da98-490f-973e-9e3932311580.jpg" },
+        { name: "Casio Modelo 4", img: "https://i.postimg.cc/yYK746b0/32708e54-dd86-43c5-866b-ccd5da745195.jpg" },
+        { name: "Casio Modelo 5", img: "https://i.postimg.cc/FKz9WPnq/35cd14f2-e726-4e41-84e7-fd5155756659.jpg" },
+        { name: "Casio Modelo 6", img: "https://i.postimg.cc/0QJ9xzv0/386a1066-97b7-4f40-b89d-a6c4a5ae93fa.jpg" },
+        { name: "Casio Modelo 7", img: "https://i.postimg.cc/xTGTcNzs/3d2cf1ac-856f-46a3-8a0b-c316d2273959.jpg" },
+        { name: "Casio Modelo 8", img: "https://i.postimg.cc/CLpxhszB/3dfe8f75-b6e0-4723-bd35-6ca57bc65d2d.jpg" },
+        { name: "Casio Modelo 9", img: "https://i.postimg.cc/QMzjRp2M/45d39f59-81f7-41a6-aded-0fd9801f285c.jpg" },
+        { name: "Casio Modelo 10", img: "https://i.postimg.cc/FHWvLysx/711034ca-5cc2-44c0-9b3e-9708a7a206fb.jpg" },
+        { name: "Casio Modelo 11", img: "https://i.postimg.cc/RCKvDJXM/7657e33a-f7ed-4713-97be-182d744afab9.jpg" },
+        { name: "Casio Modelo 12", img: "https://i.postimg.cc/6qJtQB5J/781afb84-5207-44ea-92aa-b20f0544e22f.jpg" },
+        { name: "Casio Modelo 13", img: "https://i.postimg.cc/3xJ7NS7R/88529865-8e70-4b96-8a0a-47a2b985d686.jpg" },
+        { name: "Casio Modelo 14", img: "https://i.postimg.cc/fycZt1J3/8916d997-7638-4bb0-b23a-93f6a9856cb0.jpg" },
+        { name: "Casio Modelo 15", img: "https://i.postimg.cc/gkKmY9CQ/9047c7e0-1091-41b0-90b5-0a0bb57fa5ca.jpg" },
       ],
         
       "CARTIER": [
