--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@
         { name: "Casio Modelo 15", img: "https://i.postimg.cc/g2CPRTMH/dcfe99af-b787-4a92-a304-82c9503f94be.jpg" },
         { name: "Casio Modelo 16", img: "https://i.postimg.cc/gJPm9T82/eb854526-6e2e-49ef-b339-75c71eb03162.jpg" },
       ],
-        
+      "G FORCE": [ 
+        { name: "G Force Modelo 1", img: "https://i.postimg.cc/vBgyVdyh/072d5647-05b1-4a12-8c81-fc9245d75c0d.jpg" },
+      ],
+      "G-FOX": [ 
+        { name: "G Fox Modelo 1", img: "https://i.postimg.cc/2Ss7DQ65/752d5d7a-ccfe-4c34-bd8a-588886820074.jpg" },
+        { name: "G Fox Modelo 2", img: "https://i.postimg.cc/Hkc9RZTK/ae13a0a7-1e36-472d-8832-4f7a0a188273.jpg" },
+      ],
       "CARTIER": [
         { name: "Cartier Modelo 1", img: "https://i.postimg.cc/sXP5nDLw/0861e1e8-60b6-44f8-a342-d28b0b35e0d7.jpg" },
         { name: "Cartier Modelo 2", img: "https://i.postimg.cc/fR6XD9n8/15257133-b2d2-4b42-8188-8305177f228b.jpg" },
