--- a/index.html
+++ b/index.html
@@ -116,8 +116,30 @@
         { name: "Casio Modelo 16", img: "https://i.postimg.cc/gJPm9T82/eb854526-6e2e-49ef-b339-75c71eb03162.jpg" },
       ],
       "G FORCE": [ 
-        { name: "G Force Modelo 1", img: "https://i.postimg.cc/vBgyVdyh/072d5647-05b1-4a12-8c81-fc9245d75c0d.jpg" },
+        { name: "G Force Modelo 1", img: "https://i.postimg.cc/nrQpmf4Z/072d5647-05b1-4a12-8c81-fc9245d75c0d.jpg" },
       ],
+      "G-SHOCK": [
+  { name: "G Shock Modelo 1", img: "https://i.postimg.cc/NM73TGV1/037ae117-1da1-485a-ab64-ece4542dcb5e.jpg" },
+  { name: "G Shock Modelo 2", img: "https://i.postimg.cc/8CrDFSNH/1329ae6d-a486-44fe-9559-4acf6474d681.jpg" },
+  { name: "G Shock Modelo 3", img: "https://i.postimg.cc/7ZhqkzRj/13503d6d-3280-4263-9700-9703c321ab23.jpg" },
+  { name: "G Shock Modelo 4", img: "https://i.postimg.cc/NfpQSDd1/2def4c4f-6c35-4f80-951a-8c76a6341919.jpg" },
+  { name: "G Shock Modelo 5", img: "https://i.postimg.cc/XqstHHnq/300b5061-84c7-4148-a796-4716633190fd.jpg" },
+  { name: "G Shock Modelo 6", img: "https://i.postimg.cc/R0f5SLLp/499620f1-18bf-4693-96e7-54d1465f0214.jpg" },
+  { name: "G Shock Modelo 7", img: "https://i.postimg.cc/L8GFFbLZ/54e56a67-ea8a-4102-838a-ac93e8c53d16.jpg" },
+  { name: "G Shock Modelo 8", img: "https://i.postimg.cc/mDf4C5rG/550a4e6c-e657-4bbb-889a-22c6b645a045.jpg" },
+  { name: "G Shock Modelo 9", img: "https://i.postimg.cc/655XrRBT/56a1b6f6-7e14-4a5f-8442-a46d6cbba0aa.jpg" },
+  { name: "G Shock Modelo 10", img: "https://i.postimg.cc/J0r9QVVS/6427a0ff-afd7-4d05-bdb7-de33d1cf344e.jpg" },
+  { name: "G Shock Modelo 11", img: "https://i.postimg.cc/05GkdPmX/6704a095-197a-4524-8321-fe1078739d7e.jpg" },
+  { name: "G Shock Modelo 12", img: "https://i.postimg.cc/P5Cncjpj/75e09a3b-3a2d-4232-8f1b-b04ef065fff4.jpg" },
+  { name: "G Shock Modelo 13", img: "https://i.postimg.cc/mkVGxZyb/7844d97b-a9f9-4402-928a-79559d8de61b.jpg" },
+  { name: "G Shock Modelo 14", img: "https://i.postimg.cc/4NLTBd3P/7bd062a5-5c6c-418c-b98a-69ee47c9049b.jpg" },
+  { name: "G Shock Modelo 15", img: "https://i.postimg.cc/0QsgbKtk/8a70a84a-6d8a-488d-8fc1-c97e26ce23ec.jpg" },
+  { name: "G Shock Modelo 16", img: "https://i.postimg.cc/9XB2w15v/8c21b5fe-69f4-4f12-bdaf-3f0e57bb5e38.jpg" },
+  { name: "G Shock Modelo 17", img: "https://i.postimg.cc/7YxxKdnH/c034f951-0272-4c1b-9623-44ceb7cf869e.jpg" },
+  { name: "G Shock Modelo 18", img: "https://i.postimg.cc/D07KY4sj/c396278f-20df-4aab-a76b-8d951d4d84a5.jpg" },
+  { name: "G Shock Modelo 19", img: "https://i.postimg.cc/x1ZnTCD8/c49319f0-ce07-4bd3-a323-e9d6c56ba636.jpg" },
+  { name: "G Shock Modelo 20", img: "https://i.postimg.cc/V6q8RWS0/c6393d00-e689-4e6d-8c6b-a68749308f0c.jpg" }
+],
       "G-FOX": [ 
         { name: "G Fox Modelo 1", img: "https://i.postimg.cc/2Ss7DQ65/752d5d7a-ccfe-4c34-bd8a-588886820074.jpg" },
         { name: "G Fox Modelo 2", img: "https://i.postimg.cc/Hkc9RZTK/ae13a0a7-1e36-472d-8832-4f7a0a188273.jpg" },
@@ -155,7 +177,28 @@
         { name: "Rolex Modelo 16", img: "https://i.postimg.cc/Gmc3Y3Pb/9bd6049a-5309-4ed0-89af-f2e95fef1543.jpg" },
         { name: "Rolex Modelo 17", img: "https://i.postimg.cc/jjDbQDDY/a1bd4e25-5076-4eac-b37e-465487ba6ae9.jpg" },
         { name: "Rolex Modelo 18", img: "https://i.postimg.cc/DzRKC7GJ/ac3f3bb9-da3e-4e24-9fae-a1f80e3e6fa3.jpg" },
+        { name: "Rolex Modelo 19", img: "https://i.{ name: "Rolex Modelo 1", img: "https://i.postimg.cc/26P8B4Gt/0e3064b1-904d-4bf6-a637-55f7e5da080d.jpg" },
+        { name: "Rolex Modelo 2", img: "https://i.postimg.cc/Qd08qLS1/14f74bd6-935e-4e62-a038-7e9b4e572712.jpg" },
+        { name: "Rolex Modelo 3", img: "https://i.postimg.cc/sfh2CNDC/1cabfa00-da98-490f-973e-9e3932311580.jpg" },
+        { name: "Rolex Modelo 4", img: "https://i.postimg.cc/yYK746b0/32708e54-dd86-43c5-866b-ccd5da745195.jpg" },
+        { name: "Rolex Modelo 5", img: "https://i.postimg.cc/FKz9WPnq/35cd14f2-e726-4e41-84e7-fd5155756659.jpg" },
+        { name: "Rolex Modelo 6", img: "https://i.postimg.cc/0QJ9xzv0/386a1066-97b7-4f40-b89d-a6c4a5ae93fa.jpg" },
+        { name: "Rolex Modelo 7", img: "https://i.postimg.cc/xTGTcNzs/3d2cf1ac-856f-46a3-8a0b-c316d2273959.jpg" },
+        { name: "Rolex Modelo 8", img: "https://i.postimg.cc/CLpxhszB/3dfe8f75-b6e0-4723-bd35-6ca57bc65d2d.jpg" },
+        { name: "Rolex Modelo 9", img: "https://i.postimg.cc/QMzjRp2M/45d39f59-81f7-41a6-aded-0fd9801f285c.jpg" },
+        { name: "Rolex Modelo 10", img: "https://i.postimg.cc/FHWvLysx/711034ca-5cc2-44c0-9b3e-9708a7a206fb.jpg" },
+        { name: "Rolex Modelo 11", img: "https://i.postimg.cc/RCKvDJXM/7657e33a-f7ed-4713-97be-182d744afab9.jpg" },
+        { name: "Rolex Modelo 12", img: "https://i.postimg.cc/6qJtQB5J/781afb84-5207-44ea-92aa-b20f0544e22f.jpg" },
+        { name: "Rolex Modelo 13", img: "https://i.postimg.cc/3xJ7NS7R/88529865-8e70-4b96-8a0a-47a2b985d686.jpg" },
+        { name: "Rolex Modelo 14", img: "https://i.postimg.cc/fycZt1J3/8916d997-7638-4bb0-b23a-93f6a9856cb0.jpg" },
+        { name: "Rolex Modelo 15", img: "https://i.postimg.cc/gkKmY9CQ/9047c7e0-1091-41b0-90b5-0a0bb57fa5ca.jpg" },
+        { name: "Rolex Modelo 16", img: "https://i.postimg.cc/Gmc3Y3Pb/9bd6049a-5309-4ed0-89af-f2e95fef1543.jpg" },
+        { name: "Rolex Modelo 17", img: "https://i.postimg.cc/jjDbQDDY/a1bd4e25-5076-4eac-b37e-465487ba6ae9.jpg" },
+        { name: "Rolex Modelo 18", img: "https://i.postimg.cc/DzRKC7GJ/ac3f3bb9-da3e-4e24-9fae-a1f80e3e6fa3.jpg" },
         { name: "Rolex Modelo 19", img: "https://i.postimg.cc/rmW237Gh/b82a6cd7-5e5d-43b9-919d-5b6e99d83b1a.jpg" },
+        { name: "Rolex Modelo 20", img: "https://i.postimg.cc/RhL5VfDK/c956ed47-d556-4bda-be04-1e96d537d63d.jpg" },
+        { name: "Rolex Modelo 21", img: "https://i.postimg.cc/C5gpgJmw/c9bc4011-034d-4f89-8be1-bd8e39bba668.jpg" },
+        { name: "Rolex Modelo 22", img: "https://postimg.cc/rmW237Gh/b82a6cd7-5e5d-43b9-919d-5b6e99d83b1a.jpg" },
         { name: "Rolex Modelo 20", img: "https://i.postimg.cc/RhL5VfDK/c956ed47-d556-4bda-be04-1e96d537d63d.jpg" },
         { name: "Rolex Modelo 21", img: "https://i.postimg.cc/C5gpgJmw/c9bc4011-034d-4f89-8be1-bd8e39bba668.jpg" },
         { name: "Rolex Modelo 22", img: "https://i.postimg.cc/J7NWqVz0/d439e255-c1d6-4fba-827c-bd78c4d37d59.jpg" },
