--- a/index.html
+++ b/index.html
@@ -122,6 +122,28 @@
         { name: "G Fox Modelo 1", img: "https://i.postimg.cc/2Ss7DQ65/752d5d7a-ccfe-4c34-bd8a-588886820074.jpg" },
         { name: "G Fox Modelo 2", img: "https://i.postimg.cc/Hkc9RZTK/ae13a0a7-1e36-472d-8832-4f7a0a188273.jpg" },
       ],
+      "G SHOCK": [
+        { name: "G Shock Modelo 1", img: "https://i.postimg.cc/NM73TGV1/037ae117-1da1-485a-ab64-ece4542dcb5e.jpg" },
+        { name: "G Shock Modelo 2", img: "https://i.postimg.cc/8CrDFSNH/1329ae6d-a486-44fe-9559-4acf6474d681.jpg" },
+        { name: "G Shock Modelo 3", img: "https://i.postimg.cc/7ZhqkzRj/13503d6d-3280-4263-9700-9703c321ab23.jpg" },
+        { name: "G Shock Modelo 4", img: "https://i.postimg.cc/NfpQSDd1/2def4c4f-6c35-4f80-951a-8c76a6341919.jpg" },
+        { name: "G Shock Modelo 5", img: "https://i.postimg.cc/XqstHHnq/300b5061-84c7-4148-a796-4716633190fd.jpg" },
+        { name: "G Shock Modelo 6", img: "https://i.postimg.cc/R0f5SLLp/499620f1-18bf-4693-96e7-54d1465f0214.jpg" },
+        { name: "G Shock Modelo 7", img: "https://i.postimg.cc/L8GFFbLZ/54e56a67-ea8a-4102-838a-ac93e8c53d16.jpg" },
+        { name: "G Shock Modelo 8", img: "https://i.postimg.cc/mDf4C5rG/550a4e6c-e657-4bbb-889a-22c6b645a045.jpg" },
+        { name: "G Shock Modelo 9", img: "https://i.postimg.cc/655XrRBT/56a1b6f6-7e14-4a5f-8442-a46d6cbba0aa.jpg" },
+        { name: "G Shock Modelo 10", img: "https://i.postimg.cc/J0r9QVVS/6427a0ff-afd7-4d05-bdb7-de33d1cf344e.jpg" },
+        { name: "G Shock Modelo 11", img: "https://i.postimg.cc/05GkdPmX/6704a095-197a-4524-8321-fe1078739d7e.jpg" },
+        { name: "G Shock Modelo 12", img: "https://i.postimg.cc/P5Cncjpj/75e09a3b-3a2d-4232-8f1b-b04ef065fff4.jpg" },
+        { name: "G Shock Modelo 13", img: "https://i.postimg.cc/mkVGxZyb/7844d97b-a9f9-4402-928a-79559d8de61b.jpg" },
+        { name: "G Shock Modelo 14", img: "https://i.postimg.cc/4NLTBd3P/7bd062a5-5c6c-418c-b98a-69ee47c9049b.jpg" },
+        { name: "G Shock Modelo 15", img: "https://i.postimg.cc/0QsgbKtk/8a70a84a-6d8a-488d-8fc1-c97e26ce23ec.jpg" },
+        { name: "G Shock Modelo 16", img: "https://i.postimg.cc/9XB2w15v/8c21b5fe-69f4-4f12-bdaf-3f0e57bb5e38.jpg" },
+        { name: "G Shock Modelo 17", img: "https://i.postimg.cc/7YxxKdnH/c034f951-0272-4c1b-9623-44ceb7cf869e.jpg" },
+        { name: "G Shock Modelo 18", img: "https://i.postimg.cc/D07KY4sj/c396278f-20df-4aab-a76b-8d951d4d84a5.jpg" },
+        { name: "G Shock Modelo 19", img: "https://i.postimg.cc/x1ZnTCD8/c49319f0-ce07-4bd3-a323-e9d6c56ba636.jpg" },
+        { name: "G Shock Modelo 20", img: "https://i.postimg.cc/V6q8RWS0/c6393d00-e689-4e6d-8c6b-a68749308f0c.jpg" },
+       ],
       "CARTIER": [
         { name: "Cartier Modelo 1", img: "https://i.postimg.cc/sXP5nDLw/0861e1e8-60b6-44f8-a342-d28b0b35e0d7.jpg" },
         { name: "Cartier Modelo 2", img: "https://i.postimg.cc/fR6XD9n8/15257133-b2d2-4b42-8188-8305177f228b.jpg" },
