--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="brandButtons" class="grid grid-cols-1 md:grid-cols-2 gap-4">
       <script>
         const brands = [
-  "ROLEX", "AP", "CARTIER", "CASIO", "G-SHOCK", "G FORCE", "G-FOX", "HUBLOT",
+  "ROLEX", "AP", "CARTIER", "CASIO", "G SHOCK", "G FORCE", "G FOX", "HUBLOT",
   "INVICTA", "MINIFOCUS", "ORIENT", "PATEK", "Q&Q",
   "RICHARD MILLE", "SANSE", "TECHNO", "TECHNOMARINE", "TISSOT"
 ];
@@ -118,7 +118,7 @@
       "G FORCE": [ 
         { name: "G Force Modelo 1", img: "https://i.postimg.cc/nrQpmf4Z/072d5647-05b1-4a12-8c81-fc9245d75c0d.jpg" },
       ],
-      "G-FOX": [ 
+      "G FOX": [ 
         { name: "G Fox Modelo 1", img: "https://i.postimg.cc/2Ss7DQ65/752d5d7a-ccfe-4c34-bd8a-588886820074.jpg" },
         { name: "G Fox Modelo 2", img: "https://i.postimg.cc/Hkc9RZTK/ae13a0a7-1e36-472d-8832-4f7a0a188273.jpg" },
       ],
