--- a/index.html
+++ b/index.html
@@ -136,6 +136,32 @@
         { name: "Hublot Modelo 15", img: "https://i.postimg.cc/kXK7X9Mv/cc606e15-ccea-4d98-9705-f54c6b1f455e.jpg" },
         { name: "Hublot Modelo 16", img: "https://i.postimg.cc/VvMP6Bwk/ccc01d6b-c689-4fa8-bfcf-8ac54075050e.jpg" },
       ],
+      "INVICTA": [
+        { name: "Invicta Modelo 1", img: "https://i.postimg.cc/3wmKWTZT/1cac782c-0d78-4036-9507-8e7791f06f7e.jpg" },
+        { name: "Invicta Modelo 2", img: "https://i.postimg.cc/4xK4kt7n/2144f789-6d2a-492c-989f-c11c3cf64f8e.jpg" },
+        { name: "Invicta Modelo 3", img: "https://i.postimg.cc/cLVxsHwh/716969ac-7411-43e1-b8d0-913ef4ef7333.jpg" },
+        { name: "Invicta Modelo 4", img: "https://i.postimg.cc/PJ2fhQQv/b34f5042-e838-497e-9db7-86c21334e905.jpg" },
+        { name: "Invicta Modelo 5", img: "https://i.postimg.cc/gk2ks1GV/b41edd4f-54d3-4eb9-90a3-0910e359dcc2.jpg" },
+        { name: "Invicta Modelo 6", img: "https://i.postimg.cc/Ghg35zpZ/c43ff97b-3364-456b-b368-631048ea255e.jpg" },
+        { name: "Invicta Modelo 7", img: "https://i.postimg.cc/SQrxWmbQ/eb37188d-0ae7-4f19-bed7-8c9f7045a443.jpg" },
+        { name: "Invicta Dama Modelo 1", img: "https://i.postimg.cc/CKGgS4FM/1f70ed9d-6822-4c15-850f-3241116a05b1.jpg" },
+        { name: "Invicta Dama Modelo 2", img: "https://i.postimg.cc/KzmyzgzP/2490c290-79e7-4e9b-aeaf-e55a561e0f07.jpg" },
+        { name: "Invicta Dama Modelo 3", img: "https://i.postimg.cc/kgtChmzb/3637df55-5856-41c0-8c0b-59a811bba2f0.jpg" },
+        { name: "Invicta Dama Modelo 4", img: "https://i.postimg.cc/LXvFZ6Yr/983fe5af-59e8-4cfa-a1c0-47c89c4c05cd.jpg" },
+        { name: "Invicta Dama Modelo 5", img: "https://i.postimg.cc/LsKpcWF0/d2d173e0-2289-4626-a21e-fbaae8bba768.jpg" },
+      ],
+      "MINIFOCUS": [
+        { name: "Minifocus Modelo 1", img: "https://i.postimg.cc/JhmFcCLm/22985e6f-cd01-4f8d-be55-534632315f89.jpg" },
+        { name: "Minifocus Modelo 2", img: "https://i.postimg.cc/vmzN02Yn/9d6e2156-1097-46fb-b4ed-123cc380d86b.jpg" },
+      ],
+      "ORIENT": [
+        { name: "Orient Modelo 1", img: "https://i.postimg.cc/Dmk6v1fF/0e66f60f-d390-45a5-b2ef-36b46a5bdd26.jpg" },
+        { name: "Orient Modelo 2", img: "https://i.postimg.cc/gJ747ffx/10a27972-3d50-4488-8bc9-569f88230014.jpg" },
+        { name: "Orient Modelo 3", img: "https://i.postimg.cc/h4zqGg43/aa5e6fb3-7fb8-4448-a843-4aefef0a242f.jpg" },
+        { name: "Orient Modelo 4", img: "https://i.postimg.cc/SRzVbghD/c3cdb558-5f95-4a9f-ae33-0776f2253d4f.jpg" },
+        { name: "Orient Modelo 5", img: "https://i.postimg.cc/QN2Z9PHN/d953949b-0d32-46d9-b107-f4f5ab8cd062.jpg" },
+        { name: "Orient Modelo 6", img: "https://i.postimg.cc/yY04FPZm/dc7f67b9-a27a-4986-8d6d-1b014508c406.jpg" },
+      ],
       "G FOX": [ 
         { name: "G Fox Modelo 1", img: "https://i.postimg.cc/2Ss7DQ65/752d5d7a-ccfe-4c34-bd8a-588886820074.jpg" },
         { name: "G Fox Modelo 2", img: "https://i.postimg.cc/Hkc9RZTK/ae13a0a7-1e36-472d-8832-4f7a0a188273.jpg" },
@@ -174,7 +200,7 @@
         { name: "Cartier Modelo 9", img: "https://i.postimg.cc/zfKhBGq8/cb6a188b-ebc7-4a5d-ba7d-23af925095a6.jpg" },
         { name: "Cartier Modelo 10", img: "https://i.postimg.cc/hjnd7RGx/d20d5881-18b4-4d30-94ba-93037c5a73e4.jpg" },
         { name: "Cartier Modelo 11", img: "https://i.postimg.cc/qRGCsDtF/de0ff9e5-527c-464d-b5cd-121f31d67109.jpg" },
-        { name: "Cartier Modelo 12", img: "https://i.postimg.cc/fyTSB7mR/ff29d160-1031-4560-89ca-aa40177ac44d.jpg" }
+        { name: "Cartier Modelo 12", img: "https://i.postimg.cc/fyTSB7mR/ff29d160-1031-4560-89ca-aa40177ac44d.jpg" },
       ],
       "ROLEX": [
         { name: "Rolex Modelo 1", img: "https://i.postimg.cc/26P8B4Gt/0e3064b1-904d-4bf6-a637-55f7e5da080d.jpg" },
