--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         { name: "AP Modelo 3", img: "https://i.postimg.cc/1XLwWnHn/AP2.jpg" },
         { name: "AP Modelo 4", img: "https://i.postimg.cc/t4GFW6J8/AP4.jpg" },
         { name: "AP Modelo 5", img: "https://i.postimg.cc/65vd8cWd/AP5.jpg" },
-        { name: "AP Modelo 6", img: "https://i.postimg.cc/sXMJwrrL/AP3.jpg" }
+        { name: "AP Modelo 6", img: "https://i.postimg.cc/sXMJwrrL/AP3.jpg" },
       ],
       "CASIO": [
         { name: "Casio Modelo 1", img: "https://i.postimg.cc/d0CwxY7f/0595ea8b-07e5-4121-9217-d490bd2e38bb.jpg" },
@@ -166,6 +166,22 @@
         { name: "G Fox Modelo 1", img: "https://i.postimg.cc/2Ss7DQ65/752d5d7a-ccfe-4c34-bd8a-588886820074.jpg" },
         { name: "G Fox Modelo 2", img: "https://i.postimg.cc/Hkc9RZTK/ae13a0a7-1e36-472d-8832-4f7a0a188273.jpg" },
       ],
+      "Q&Q": [
+        { name: "Q&Q Modelo 1", img: "https://i.postimg.cc/WpMX8f51/1221a641-9419-4e9e-a7b2-a61b1351b2ae.jpg" },
+        { name: "Q&Q Modelo 2", img: "https://i.postimg.cc/XvGgC2Z3/1ec8bf34-bffd-4193-ade5-bdd8b751ce50.jpg" },
+        { name: "Q&Q Modelo 3", img: "https://i.postimg.cc/qMwQV6Vf/25da8bb6-6615-47be-bbff-4d783b1b884b.jpg" },
+        { name: "Q&Q Modelo 4", img: "https://i.postimg.cc/nhL2HVpX/2a4a54d2-86b6-44ae-868d-b1aca0aceec2.jpg" },
+        { name: "Q&Q Modelo 5", img: "https://i.postimg.cc/2ymdgr08/3cad00fc-916d-4d27-84de-7a9d6bc5079f.jpg" },
+        { name: "Q&Q Modelo 6", img: "https://i.postimg.cc/LXjBynBb/6dccdcdf-fb4c-4b26-b509-3fa3eeaa5698.jpg" },
+        { name: "Q&Q Modelo 7", img: "https://i.postimg.cc/P5F4NG52/6eef321d-d9ce-4d89-9ab4-a94233a47ccc.jpg" },
+        { name: "Q&Q Modelo 8", img: "https://i.postimg.cc/k50vFx8S/a4213ae6-9da6-49cb-929d-af289e6600f4.jpg" },
+        { name: "Q&Q Modelo 9", img: "https://i.postimg.cc/SNkVv7P7/a4c93df0-07cb-43a6-b362-7b1e1a2753f1.jpg" },
+        { name: "Q&Q Dama Modelo 1", img: "https://i.postimg.cc/VvDtTMSD/3bdb9bbe-e2ba-4de2-af37-f1384fcc4f94.jpg" },
+        { name: "Q&Q Dama Modelo 2", img: "https://i.postimg.cc/BZg2XWhH/7fdb03d2-0909-4a08-9c33-ef5aef4dedf8.jpg" },
+        { name: "Q&Q Dama Modelo 3", img: "https://i.postimg.cc/Wb1gZ9KK/9dd4db2d-9330-4ae6-b658-5fdee772ad56.jpg" },
+        { name: "Q&Q Dama Modelo 4", img: "https://i.postimg.cc/0j8mcZNz/ec25b4ee-c579-4489-b167-a2934520e500.jpg" },
+        { name: "Q&Q Dama Modelo 5", img: "https://i.postimg.cc/B65HTRJW/ed383247-6828-40a5-abf4-b18ae2797798.jpg" },
+      ],
       "G SHOCK": [
         { name: "G Shock Modelo 1", img: "https://i.postimg.cc/NM73TGV1/037ae117-1da1-485a-ab64-ece4542dcb5e.jpg" },
         { name: "G Shock Modelo 2", img: "https://i.postimg.cc/8CrDFSNH/1329ae6d-a486-44fe-9559-4acf6474d681.jpg" },
@@ -201,6 +217,13 @@
         { name: "Cartier Modelo 10", img: "https://i.postimg.cc/hjnd7RGx/d20d5881-18b4-4d30-94ba-93037c5a73e4.jpg" },
         { name: "Cartier Modelo 11", img: "https://i.postimg.cc/qRGCsDtF/de0ff9e5-527c-464d-b5cd-121f31d67109.jpg" },
         { name: "Cartier Modelo 12", img: "https://i.postimg.cc/fyTSB7mR/ff29d160-1031-4560-89ca-aa40177ac44d.jpg" },
+      ],
+      "PATEK": [
+        { name: "Patek Dama Modelo 1", img: "https://i.postimg.cc/wvRb9q5X/0cb2336f-7882-44ca-a04d-fa9c02ee4684.jpg" },
+        { name: "Patek Dama Modelo 2", img: "https://i.postimg.cc/BvVVWLFZ/7b0dbe8e-6cb1-416e-8ff1-720ab1fc82b3.jpg" },
+        { name: "Patek Dama Modelo 3", img: "https://i.postimg.cc/XYxP8D7C/cd26c493-7610-402b-81d5-40b009f91126.jpg" },
+        { name: "Patek Dama Modelo 4", img: "https://i.postimg.cc/bNxWGw7L/e140ca39-c266-4578-8a7f-02a29104d870.jpg" },
+        { name: "Patek Dama Modelo 5", img: "https://i.postimg.cc/ZqRMDFCD/f9fee0c5-2693-4227-a2cb-1e13d3b7e3b0.jpg" },
       ],
       "ROLEX": [
         { name: "Rolex Modelo 1", img: "https://i.postimg.cc/26P8B4Gt/0e3064b1-904d-4bf6-a637-55f7e5da080d.jpg" },
