--- a/index.html
+++ b/index.html
@@ -225,6 +225,36 @@
         { name: "Patek Dama Modelo 4", img: "https://i.postimg.cc/bNxWGw7L/e140ca39-c266-4578-8a7f-02a29104d870.jpg" },
         { name: "Patek Dama Modelo 5", img: "https://i.postimg.cc/ZqRMDFCD/f9fee0c5-2693-4227-a2cb-1e13d3b7e3b0.jpg" },
       ],
+      "RICHARD MILLE": [
+        { name: "Richard Mille Modelo 1", img: "https://i.postimg.cc/PxFhR5X1/0a22ea98-ec17-47b2-993c-3ce9bda1f055.jpg" },
+        { name: "Richard Mille Modelo 2", img: "https://i.postimg.cc/02SxVvLJ/14595a4c-3e5a-409f-994f-49270744be73.jpg" },
+        { name: "Richard Mille Modelo 3", img: "https://i.postimg.cc/zDcXd0v4/1891d148-19f7-449c-a091-df104221bbfe.jpg" },
+        { name: "Richard Mille Modelo 4", img: "https://i.postimg.cc/FzLtCbnQ/1de02a07-669c-4ca6-9644-400eea67374b.jpg" },
+        { name: "Richard Mille Modelo 5", img: "https://i.postimg.cc/rwLTbbkZ/218a117e-8c5f-4a33-b155-e458589f65a0.jpg" },
+        { name: "Richard Mille Modelo 6", img: "https://i.postimg.cc/Kz4hBhPj/26be5a80-ff34-4aab-b5bc-0e5d7790b453.jpg" },
+        { name: "Richard Mille Modelo 7", img: "https://i.postimg.cc/D0Hv8yR7/3064c9f1-ad16-47bc-b19c-5a8f9608ae4d.jpg" },
+        { name: "Richard Mille Modelo 8", img: "https://i.postimg.cc/QdLNDCpb/338f748a-f88a-44ce-ab30-82f53aa41974.jpg" },
+        { name: "Richard Mille Modelo 9", img: "https://i.postimg.cc/HxKDtvz2/5552e729-c970-427f-8743-b2d8f8f5e501.jpg" },
+        { name: "Richard Mille Modelo 10", img: "https://i.postimg.cc/bNSY4k2r/591544b3-c498-467a-b097-0d81af514756.jpg" },
+        { name: "Richard Mille Modelo 11", img: "https://i.postimg.cc/qv8Jvrwd/673f5ee0-76de-4817-a691-0901645356e4.jpg" },
+        { name: "Richard Mille Modelo 12", img: "https://i.postimg.cc/250f1SBg/912a69b8-8496-4fb8-ba78-6d07698b27ad.jpg" },
+        { name: "Richard Mille Modelo 13", img: "https://i.postimg.cc/JnhMxkL1/9645c2ad-2b39-41d0-9de6-e4767070bf46.jpg" },
+        { name: "Richard Mille Modelo 14", img: "https://i.postimg.cc/66gtVq1X/a9007527-faa1-41ef-b706-56ad6dc47e64.jpg" },
+        { name: "Richard Mille Modelo 15", img: "https://i.postimg.cc/fbDw3PqS/b4d88304-7741-4b8d-9284-6d55a0724d02.jpg" },
+        { name: "Richard Mille Modelo 16", img: "https://i.postimg.cc/MG6SZQXy/b6708bba-ea4e-43fd-ac3d-ccace4c1315e.jpg" },
+        { name: "Richard Mille Modelo 17", img: "https://i.postimg.cc/7ZM4yVPH/db31bf36-7fee-4094-a51b-d7b1991f02a3.jpg" },
+        { name: "Richard Mille Modelo 18", img: "https://i.postimg.cc/8C4TLbxK/e134440e-6129-49e4-9279-32585033ab44.jpg" },
+        { name: "Richard Mille Modelo 19", img: "https://i.postimg.cc/Kj6bmpgz/e60733f8-a701-43c0-8a68-4ffcf618d882.jpg" },
+        { name: "Richard Mille Modelo 20", img: "https://i.postimg.cc/tJZyQGJw/f1311aa5-98fc-48fd-ba1e-4cf8799397d5.jpg" },
+      ],
+      "SANSE": [
+        { name: "Sanse Modelo 1", img: "https://i.postimg.cc/qRnVjXFH/37457108-3f7d-47e0-b422-7090a2583f27.jpg" },
+        { name: "Sanse Modelo 2", img: "https://i.postimg.cc/d3YMXZMk/90ad9591-8f66-48b2-b94e-1e36528936e8.jpg" },
+        { name: "Sanse Modelo 3", img: "https://i.postimg.cc/MGgJ7rdY/992ce1fa-21f4-4b36-853e-1c0e9bff0bf0.jpg" },
+        { name: "Sanse Modelo 4", img: "https://i.postimg.cc/zfy1R1SB/ab0fb6fe-b503-4609-a864-9f29a52aedac.jpg" },
+        { name: "Sanse Modelo 5", img: "https://i.postimg.cc/Y0zcw2kX/d498c445-09de-4bce-9780-dabbcbab3737.jpg" },
+        { name: "Sanse Modelo 6", img: "https://i.postimg.cc/kg1m45Sz/f2466599-79e4-42e2-bac1-f92ecbd510ce.jpg" },
+      ],
       "ROLEX": [
         { name: "Rolex Modelo 1", img: "https://i.postimg.cc/26P8B4Gt/0e3064b1-904d-4bf6-a637-55f7e5da080d.jpg" },
         { name: "Rolex Modelo 2", img: "https://i.postimg.cc/Qd08qLS1/14f74bd6-935e-4e62-a038-7e9b4e572712.jpg" },
@@ -275,7 +305,7 @@
           <img src="${product.img}" alt="${product.name}" class="w-full h-48 object-contain bg-gray-100">
           <div class="p-4">
             <h4 class="text-xl font-semibold mb-1">${product.name}</h4>
-            <p class="text-gray-900 font-bold mb-4">$120.000</p>
+            <p class="text-gray-900 font-bold mb-4"></p>
             <a href="https://wa.me/573113296885?text=Hola,%20me%20interesa%20el%20${encodeURIComponent(product.name)}%0AImagen:%20${encodeURIComponent(product.img)}%0APrecio:%20$120.000%20COP"
               target="_blank"
               class="inline-block bg-black text-white px-4 py-2 rounded hover:bg-gray-800 transition">
