--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         const brands = [
   "ROLEX", "AP", "CARTIER", "CASIO", "G SHOCK", "G FORCE", "G FOX", "HUBLOT",
   "INVICTA", "MINIFOCUS", "ORIENT", "PATEK", "Q&Q",
-  "RICHARD MILLE", "SANSE", "TECHNO", "TECHNOMARINE", "TISSOT"
+  "RICHARD MILLE", "SANSE", "TECHNOMARINE", "TISSOT"
 ];
         brands.forEach((brand) => {
           document.write(`
