--- a/index.html
+++ b/index.html
@@ -97,6 +97,32 @@
         { name: "AP Modelo 5", img: "https://i.postimg.cc/65vd8cWd/AP5.jpg" },
         { name: "AP Modelo 6", img: "https://i.postimg.cc/sXMJwrrL/AP3.jpg" },
       ],
+      "TECHNOMARINE": [
+        { name: "Technomarine Modelo 1", img: "https://i.postimg.cc/ncXK5Rkm/025c9c70-af95-4b0a-a3dd-1a8a22c6c98e.jpg" },
+        { name: "Technomarine Modelo 2", img: "https://i.postimg.cc/J02N0Z1t/0ec06b6c-746e-4091-bd9a-bfb8878db1d8.jpg" },
+        { name: "Technomarine Modelo 3", img: "https://i.postimg.cc/Xvk9FTVR/37f152bc-cf8f-4462-9bd4-cbfdf3fd794f.jpg" },
+        { name: "Technomarine Modelo 4", img: "https://i.postimg.cc/nh8mWHM8/3ca6b3ad-2ea9-4dff-8971-4cda30af737b.jpg" },
+        { name: "Technomarine Modelo 5", img: "https://i.postimg.cc/nrjsd5Jc/46cc298d-0cf4-47b7-b8b0-2e999176cfa2.jpg" },
+        { name: "Technomarine Modelo 6", img: "https://i.postimg.cc/fypdDsK9/4e819a36-4e81-42e3-bc5f-bfe91e4f83ea.jpg" },
+        { name: "Technomarine Modelo 7", img: "https://i.postimg.cc/FK4jY9Qb/4e8d7b2e-82cc-4515-8c7e-7ea7ed5a3b41.jpg" },
+        { name: "Technomarine Modelo 8", img: "https://i.postimg.cc/NF3KZ4s8/5009f59b-951b-4b45-afa5-5413daff4a1a.jpg" },
+        { name: "Technomarine Modelo 9", img: "https://i.postimg.cc/ht9mWH7X/5e08e83e-4a07-4f63-aa54-be3dbd37a423.jpg" },
+        { name: "Technomarine Modelo 10", img: "https://i.postimg.cc/pV4592f9/6a1dcd29-b789-4e22-b8d4-986bd8d99fe7.jpg" },
+        { name: "Technomarine Modelo 11", img: "https://i.postimg.cc/0QHM0vhB/6e40964d-56d3-4ef5-9c82-cd7af6c62fce.jpg" },
+        { name: "Technomarine Modelo 12", img: "https://i.postimg.cc/Z538YWXK/7b619e4b-3914-41b1-b835-fa2914550e8e.jpg" },
+        { name: "Technomarine Modelo 13", img: "https://i.postimg.cc/MTZVYdHv/9c92d327-182f-46a8-95ba-a5647fe93b62.jpg" },
+        { name: "Technomarine Modelo 14", img: "https://i.postimg.cc/3NdGsNgh/9f8a27cf-2a1b-4529-bfa9-0547c6f6f74c.jpg" },
+        { name: "Technomarine Modelo 15", img: "https://i.postimg.cc/hGcdSp9p/a68c80bf-63ad-4e30-b7d9-04537b3ffead.jpg" },
+        { name: "Technomarine Modelo 16", img: "https://i.postimg.cc/MKg087PF/ae017757-857b-4e44-81b8-fe88009db3b6.jpg" },
+        { name: "Technomarine Modelo 17", img: "https://i.postimg.cc/xTmJMW56/b365994c-9bba-4748-b583-c1b5188f6139.jpg" },
+        { name: "Technomarine Modelo 18", img: "https://i.postimg.cc/vBmxnT2n/be76e24c-8a92-4df1-a67e-0134f7ea4513.jpg" },
+        { name: "Technomarine Modelo 19", img: "https://i.postimg.cc/Mp8cDdrq/c43820be-7dbf-41f5-9c89-c227d93e8d26.jpg" },
+        { name: "Technomarine Modelo 20", img: "https://i.postimg.cc/5NQvpH4q/c9407095-255c-42c1-a14d-8aec8fb1eb06.jpg" },
+        { name: "Technomarine Modelo 21", img: "https://i.postimg.cc/MG5jXV5x/d9692872-5d11-4a37-a31b-14f8428f06a7.jpg" },
+        { name: "Technomarine Modelo 22", img: "https://i.postimg.cc/1Rjwp0Q3/f7926e45-e2a2-4a10-8539-53f1bb7eb7f9.jpg" },
+        { name: "Technomarine Modelo 23", img: "https://i.postimg.cc/3RLpfm09/fe8e5eeb-5877-40cc-b443-40e00f90ab66.jpg" },
+        { name: "Technomarine Dama Modelo 1", img: "https://i.postimg.cc/ZKNj7Y43/7521cdf8-2c34-468d-94f1-39649e20971a.jpg" }
+      ],
       "CASIO": [
         { name: "Casio Modelo 1", img: "https://i.postimg.cc/d0CwxY7f/0595ea8b-07e5-4121-9217-d490bd2e38bb.jpg" },
         { name: "Casio Modelo 2", img: "https://i.postimg.cc/BZpsyN6J/10ed19f1-4242-47b5-a3f7-6487e0b77325.jpg" },
